syntax = "proto3";

package kurrentdb.protocol.v2.custom_indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.CustomIndexes";

import "custom-indexes/shared.proto";

message CustomIndexCreated {
  string filter = 1;
  string partition_key_selector = 2;
  KeyType partition_key_type = 3;
}

message CustomIndexStarted {
}

message CustomIndexStopped {
}

message CustomIndexDeleted {
}
