syntax = "proto3";

package kurrentdb.protocol.v2.indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes";

enum FieldType {
  FIELD_TYPE_UNSPECIFIED = 0;
  FIELD_TYPE_STRING = 1;
  FIELD_TYPE_DOUBLE = 2;
//  FIELD_TYPE_INT_16 = 3;
  FIELD_TYPE_INT_32 = 4;
  FIELD_TYPE_INT_64 = 5;
//  FIELD_TYPE_UINT_32 = 6;
//  FIELD_TYPE_UINT_64 = 7;
}

message Field {
  string name = 1;
  string selector = 2;
  reserved 3; // selector type (js, json path, surge style js)
  FieldType type = 4;
}
